2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/Makefile.am

	Removed ephy-new-bookmark and ephy-topics-selector from the Makefile.
	
	* src/ephy-history-window.c
	* src/popup-commands.c
	* src/window-commands.c
	* src/bookmarks/ephy-bookmarks-editor.c
	
	Removed all the slightly different bits of code to create a
	bookmark and called ephy_bookmarks_ui_add_bookmark instead.
	
	* src/bookmarks/ephy-bookmarks.c
	* src/bookmarks/ephy-bookmarks.h
	
	Moved the hashtable for bookmark windows to ephy-bookmarks-ui.
	Added a new field "usericon" to the ephynode/bookmarks database,
	to store the URL of the user-defined icon (if any). It can be
	NULL (use site icon), "" (use none), or a URL.

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmark-properties.h
	
	Large changes to the bookmark properties window to handle different
	use cases (adding or changing a bookmark), to use the new topics
	palette widget, and to support the new usericon.
	
	* src/bookmarks/ephy-bookmarks-ui.c
	* src/bookmarks/ephy-bookmarks-ui.h

	Large additions to ephy-bookmarks-ui to replace ephy-new-bookmark.
	Fixed some bugs in the datatype handlers for the toolbar which
	are supplied by ephy-bookmarks-ui.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topics-palette.c
	* src/bookmarks/ephy-topics-palette.h
	
	Implemented a new widget for topic selection that tries
	to organise the topics for the user.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topic-action.c
	
	Handle DnD to topics on the toolbar.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.h
	
	Checking in forgotten changes to the editable toolbar API.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	
	Cleaned up ephy-bookmark-action.c to match the new
	gtk-ui-manager based popup menu on the toolbar.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
