@@ -1,5 +1,16 @@
 2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/Makefile.am
+	
+	Forgotten Makefile changes.
+	
+	* src/epiphany.defs
+
+	'Fixes' for the python interface.
+	Probably need to regenerate somehow, but don't know how do it correctly.
+
+2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* src/Makefile.am
 
 	Removed ephy-new-bookmark and ephy-topics-selector from the Makefile.
